v<0.0.0>, <08/01/2020> -- Initial release.
v<0.0.1>, <08/03/2020> -- Initial release & minor example fix.
v<0.0.2>, <08/04/2020> -- Set up autotests.