@@ -4,10 +4,34 @@ pyhealth.evaluation package
 Submodules
 ----------
 
+pyhealth.evaluation.binaryclass module
+--------------------------------------
+
+.. automodule:: pyhealth.evaluation.binaryclass
+   :members:
+   :undoc-members:
+   :show-inheritance:
+
+pyhealth.evaluation.evaluator module
+------------------------------------
+
+.. automodule:: pyhealth.evaluation.evaluator
+   :members:
+   :undoc-members:
+   :show-inheritance:
+
 pyhealth.evaluation.mortality module
 ------------------------------------
 
 .. automodule:: pyhealth.evaluation.mortality
+   :members:
+   :undoc-members:
+   :show-inheritance:
+
+pyhealth.evaluation.multilabel module
+-------------------------------------
+
+.. automodule:: pyhealth.evaluation.multilabel
    :members:
    :undoc-members:
    :show-inheritance:
